...
) {
    val textMeasurer = rememberTextMeasurer()
    val view = state.view
    Canvas(
        modifier = modifier
            .clipToBounds()
            .testTag("courseMap")
            .pointerInput(view) {
                detectTransformGestures { centroid, pan, zoom, _ ->
                    camera.transform(view, size.toSize(), centroid, pan, zoom)
                }
            }
            .pointerInput(Unit) {
...
